--- a/Julian_LOSOM_ENLM.html
+++ b/Julian_LOSOM_ENLM.html
@@ -33,11 +33,13 @@ class: left, middle
 
 ### Lake Okeechobee System Operating Manual&lt;br&gt;(WQ Subteam)
 
-#### .fancy[Estuary Nutrient Loading Model]
+#### .fancy[DRAFT - Estuary Nutrient Loading Model]
 
-&lt;!--.large[&lt;font color="white"&gt;Paul Julian, PhD | September 14,2020&lt;/font&gt;]--&gt;
+&lt;!--.large[&lt;font color="white"&gt;Paul Julian, PhD | September 15,2020&lt;/font&gt;]--&gt;
 
-.large[Paul Julian, PhD | September 14, 2020]
+FDEP - Office of Water Policy and Ecosystem Restoration
+
+September 14, 2020
 
 &lt;!-- this ends up being the title slide since seal = FALSE--&gt;
 
