--- a/Julian_LOSOM_ENLM.html
+++ b/Julian_LOSOM_ENLM.html
@@ -37,13 +37,20 @@ class: left, middle
 
 #### .fancy[DRAFT - Estuary Nutrient Loading Model]
 
-&lt;!--.large[&lt;font color="white"&gt;Paul Julian, PhD | September 16,2020&lt;/font&gt;]--&gt;
+&lt;!--.large[&lt;font color="white"&gt;Paul Julian, PhD | September 17,2020&lt;/font&gt;]--&gt;
 
 FDEP - Office of Water Policy and Ecosystem Restoration
 
 September 18, 2020
 
 &lt;!-- this ends up being the title slide since seal = FALSE--&gt;
+
+---
+name: map
+class: middle
+
+&lt;img src="./resources/LOSOM_map.png" width="100%" style="display: block; margin: auto;" /&gt;
+
 
 ---
 name: intro_goal
@@ -289,7 +296,7 @@ class: left
 #### S-79 Water Quality Model (Total Nitrogen)
 
 `\begin{align*}
-TP Load_{S79} = Q_{C43 Basin} +  Q_{S77} + Mean  Lake  Stage
+TN Load_{S79} = Q_{C43 Basin} +  Q_{S77} + Mean  Lake  Stage
 \end{align*}`
 
 .pull-left[
@@ -313,7 +320,7 @@ class: left
 #### S-79 Water Quality Model (Total Nitrogen)
 
 `\begin{align*}
-TP Load_{S79} = Q_{C43 Basin} +  Q_{S77} + Mean  Lake  Stage
+TN Load_{S79} = Q_{C43 Basin} +  Q_{S77} + Mean  Lake  Stage
 \end{align*}`
 
 .pull-left[
@@ -338,7 +345,7 @@ class: left
 #### S-79 Water Quality Model (Total Nitrogen)
 
 `\begin{align*}
-TP Load_{S79} = Q_{C43 Basin} +  Q_{S77} + Mean  Lake  Stage
+TN Load_{S79} = Q_{C43 Basin} +  Q_{S77} + Mean  Lake  Stage
 \end{align*}`
 
 .pull-left[
@@ -367,6 +374,10 @@ class: left
 &lt;img src="./resources/C43_WY_ObsPredloads.png" width="1733" style="display: block; margin: auto;" /&gt;
 
 Annual observed versus predicted ( `\(\pm\)` 95% CI) S-79 load during the period of record (WY1982 – WY 2019) with hurricane years identified. 
+
+???
+- Caloosahatchee TMDL is 412 thousand kg/Yr (908,6094 lbs/Y)
+- TMDL includes S79 and tidal basin.
 
 ---
 name: WQMods2
@@ -416,7 +427,7 @@ South Florida Water Management District ([DBHYDRO](https://www.sfwmd.gov/science
 
 #### Slides
 
-* HTML [Slide deck](http://swampthingecology.org/LOSOM_ENLM/Julian_LOSOM_ENLM) &amp;copy; Julian (2020) [![Creative Commons License](https://i.creativecommons.org/l/by/4.0/88x31.png)](http://creativecommons.org/licenses/by/4.0/)
+* HTML [Slide deck](https://swampthingecology.org/slides/20200918_LOSOM_ENLM/Julian_LOSOM_ENLM.html) &amp;copy; Julian (2020) [![Creative Commons License](https://i.creativecommons.org/l/by/4.0/88x31.png)](http://creativecommons.org/licenses/by/4.0/)
 
 * RMarkdown [Source](https://github.com/SwampThingPaul/LOSOM_ENLM)
 
